merge e us