@@ -1,7 +1,7 @@
 package com.tqs.polarent.controller;
 
 import com.tqs.polarent.dto.ListingResponseDTO;
-import com.tqs.polarent.service.ListingService;
+import com.tqs.polarent.services.ListingService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -15,7 +15,10 @@ import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class ListingControllerTest {
@@ -26,35 +29,55 @@ class ListingControllerTest {
     @InjectMocks
     private ListingController listingController;
 
-    private ListingResponseDTO camera1;
-    private ListingResponseDTO camera2;
+    private ListingResponseDTO responseDTO;
+    private ListingResponseDTO camera1Dto;
+    private ListingResponseDTO camera2Dto;
 
     @BeforeEach
     void setUp() {
-        camera1 = new ListingResponseDTO();
-        camera1.setId(1L);
-        camera1.setTitle("Canon EOS R5");
-        camera1.setDailyRate(89.99);
+        responseDTO = new ListingResponseDTO();
+        responseDTO.setId(1L);
+        responseDTO.setOwnerId(10L);
+        responseDTO.setTitle("Test Listing");
+        responseDTO.setDescription("Description");
+        responseDTO.setDailyRate(50.0);
+        responseDTO.setEnabled(true);
 
-        camera2 = new ListingResponseDTO();
-        camera2.setId(2L);
-        camera2.setTitle("Sony A7IV");
-        camera2.setDailyRate(79.99);
+        camera1Dto = new ListingResponseDTO();
+        camera1Dto.setId(1L);
+        camera1Dto.setTitle("Canon EOS R5");
+        camera1Dto.setDailyRate(89.99);
+
+        camera2Dto = new ListingResponseDTO();
+        camera2Dto.setId(2L);
+        camera2Dto.setTitle("Sony A7IV");
+        camera2Dto.setDailyRate(79.99);
     }
 
     @Test
     void whenGetEnabledListings_thenReturn200() {
-        List<ListingResponseDTO> listings = Arrays.asList(camera1, camera2);
-        when(listingService.getEnabledListings()).thenReturn(listings);
+        when(listingService.getEnabledListings()).thenReturn(List.of(responseDTO));
+
         ResponseEntity<List<ListingResponseDTO>> response = listingController.getEnabledListings();
+
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(response.getBody()).hasSize(2);
-        assertThat(response.getBody().get(0).getTitle()).isEqualTo("Canon EOS R5");
+        assertThat(response.getBody()).hasSize(1);
+    }
+
+    @Test
+    void whenUpdateListing_thenReturn200() {
+        when(listingService.updateListing(eq(1L), any(ListingResponseDTO.class))).thenReturn(responseDTO);
+
+        ResponseEntity<ListingResponseDTO> response = listingController.updateListing(1L, responseDTO);
+
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(response.getBody()).isNotNull();
+        assertThat(response.getBody().getTitle()).isEqualTo("Test Listing");
     }
 
     @Test
     void whenSearchListingsWithTerm_thenReturn200() {
-        List<ListingResponseDTO> listings = Arrays.asList(camera1);
+        List<ListingResponseDTO> listings = Arrays.asList(camera1Dto);
         when(listingService.searchListings("canon")).thenReturn(listings);
         ResponseEntity<List<ListingResponseDTO>> response = listingController.searchListings("canon");
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
@@ -64,7 +87,7 @@ class ListingControllerTest {
 
     @Test
     void whenSearchListingsWithoutTerm_thenReturnAllEnabled() {
-        List<ListingResponseDTO> listings = Arrays.asList(camera1, camera2);
+        List<ListingResponseDTO> listings = Arrays.asList(camera1Dto, camera2Dto);
         when(listingService.searchListings(null)).thenReturn(listings);
         ResponseEntity<List<ListingResponseDTO>> response = listingController.searchListings(null);
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
@@ -73,11 +96,22 @@ class ListingControllerTest {
 
     @Test
     void whenSearchListingsWithEmptyTerm_thenReturnAllEnabled() {
-        List<ListingResponseDTO> listings = Arrays.asList(camera1, camera2);
+        List<ListingResponseDTO> listings = Arrays.asList(camera1Dto, camera2Dto);
         when(listingService.searchListings("")).thenReturn(listings);
         ResponseEntity<List<ListingResponseDTO>> response = listingController.searchListings("");
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
         assertThat(response.getBody()).hasSize(2);
+    }
+
+    @Test
+    void whenPatchListing_thenReturn200() {
+        when(listingService.patchListing(eq(1L), any(ListingResponseDTO.class))).thenReturn(responseDTO);
+
+        ResponseEntity<ListingResponseDTO> response = listingController.patchListing(1L, responseDTO);
+
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(response.getBody()).isNotNull();
+        assertThat(response.getBody().getTitle()).isEqualTo("Test Listing");
     }
 
     @Test
@@ -87,5 +121,15 @@ class ListingControllerTest {
         ResponseEntity<List<ListingResponseDTO>> response = listingController.searchListings("drone");
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
         assertThat(response.getBody()).isEmpty();
+    }
+
+    @Test
+    void whenDeleteListing_thenReturn204() {
+        doNothing().when(listingService).deleteListing(10L, 1L);
+
+        ResponseEntity<Void> response = listingController.deleteListing(10L, 1L);
+
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
+        verify(listingService).deleteListing(10L, 1L);
     }
 }
